fixed multi thread logic